# hftcpp

./: .clang-format  .gitattributes  .sudoku.cpp.swp  .vimrc  CMakeLists.txt  README.md  hist.txt  let.txt  libc-ares-dev_1.18.1-1build1_amd64.deb  main.cc  sudok.cpp  sudok.h  tags  tags.sh  test.txt  words
.cache/clangd/index/: Appbase.cpp.3EE3CB1825D64018.idx  Appbase.h.0029ED5DC327E36B.idx  abort_on_ebadf.hh.16B9DC5F42D6B3EC.idx  abort_on_expiry.hh.CD125D7DA9AAF16A.idx  abort_source.hh.29E56E270B814AF7.idx  abortable_fifo.hh.63E5C404144F74F5.idx  alien.cc.13E4E813DD4C649A.idx  alien.hh.39A05E55B52521D0.idx  align.hh.9DE1B9FB6434EF3C.idx  aligned_buffer.hh.4782DDAF7664453F.idx  alloc_failure_injector.cc.B87754966473DBEC.idx  alloc_failure_injector.hh.132FB972F87763B0.idx  api-level.hh.C32931996B1AC494.idx  api.hh.DF2C6BA4BB2D7978.idx  api_docs.cc.B37A670C984A9E15.idx  api_docs.hh.3736EA8BB08E6040.idx  app-template.cc.88DB1EC3448599C2.idx  app-template.hh.A7408B052D2C79BA.idx  arp.cc.29D0BBA141451DF4.idx  arp.hh.F9B0F4AE999CCB08.idx  array_map.hh.3D372E907287E6F4.idx  backtrace.cc.7B2647DBA6D69914.idx  backtrace.hh.C180E3F104F7624D.idx  bitops.hh.7D0D43EC3FB45BE6.idx  bitset-iter.hh.98ABD7B766DF52B4.idx  bool_class.hh.9B0AA36BEE000A6D.idx  buffer_allocator.hh.ED8BA95C92029FD3.idx  byteorder.hh.26F882CB614E797A.idx  byteorder.hh.738E8530135F484C.idx  cacheline.hh.0D231AE4949F08C3.idx  cgroup.hh.B942FEB8E4854D14.idx  chunked_fifo.hh.E588B0A7F87F722B.idx  circular_buffer.hh.2DBCDFF681B709C4.idx  circular_buffer_fixed_capacity.hh.AC9DF9A037E2C8E3.idx  client.cc.F093C8402B6F3A6C.idx  client.hh.530A7045CF393F6C.idx  common.cc.2089CADFCA72A147.idx  common.hh.83E0C3FC04AB74BE.idx  concepts.hh.B3A6D0D9E19F9F2F.idx  condition-variable.cc.1AAD8C173A4705E0.idx  (+260 more)
src/: CMakeLists.txt
src/k2/: CMakeLists.txt
src/k2/appbase/: Appbase.cpp  Appbase.h  CMakeLists.txt
